Archive2/77/f5589ec71bc79f/output
main.cpp: In function 'int main()':
main.cpp:4:14: error: 'null' was not declared in this scope
     int* x = null;
              ^
main.cpp:4:10: warning: unused variable 'x' [-Wunused-variable]
     int* x = null;
          ^
