Archive2/77/f5589ec71bc79f/main.cpp
#include <iostream>

auto main() -> int {
    int* x = null;
    return 0;
}